src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 800;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

.App {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  justify-content: center;
  min-width: 320px;
  min-height: 100vh;
}

ul li {
  list-style-type: none;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
  text-align: center;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.main-buttons {
  margin: 12px;
}

.main-content {
  display: flex;
  flex-direction: row;
}

/* Base styles for both received and sent messages */
.chat-message-other, .chat-message {
  margin: 3px 10px;
  padding: 8px 10px;
  border-radius: 18px;
  word-wrap: break-word;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
}

.profile-img {
  display: flex;
  justify-content: center;
}

.select-user-img {
  padding-right: 6px;
  border-radius: 21%;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.03), 0 6px 20px rgba(0, 0, 0, 0.03);
}

/* Received messages */
.chat-message-other {
  background-color: #f0f0f0; /* Light gray background */
  text-align: left;
  width: fit-content;
  float: left; /* Align to left */
  clear: both; /* Clear float */
}

/* Sent messages */
.chat-message {
  background-color: #0084ff; /* Facebook Messenger blue */
  color: white; /* White text for sent messages */
  text-align: right;
  width: fit-content;
  float: right; /* Align to right */
  clear: both; /* Clear float */
}

.chat-send-message {
  margin: 3px 10px;
  padding: 8px 10px;
  word-wrap: break-word;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
}

.message-bubble-container {
  width: 100%;
}

/* Clearfix for floating elements */
.chat-container::after {
  content: "";
  display: table;
  clear: both;
}

/* all messages in chat */
.chat-messages { 
  min-width: 390px;
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* all message line content */
.chat-send {
  display: flex;
  justify-content: center;
  align-items: center;
}

.chat-messages-new {
  display: flex;
}

.chat-messages-new-input {
  width: 100%;
}

.selectedUserName {
  align-items: center;
  text-align: center;
}

.username-select {
  display: relative;
  height: 100%;
  width: 100%;
  text-align: center;
  align-items: center;
  align-content: center;
  color: black;
  top: 50%;
  left: 50%;
}

.user-button {
  margin-top: 3px;
  margin-bottom: 3px;
}

.user-button button {
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  align-content: center;
  font-weight: 400;
}

.logo {
  padding: 1.25em;
  will-change: filter;
  transition: filter 300ms;
}

.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}

.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

.logo.ts:hover {
  filter: drop-shadow(0 0 2em #3178c6aa);
}

.logo.scss:hover {
  filter: drop-shadow(0 0 2em #cc6698aa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

.chat-main {
  display: flex;
  flex-direction: column;
  height: 100vh; /* Full viewport height */
}

.chat-content {
  flex-grow: 1; /* Grow to fill available space */
}

.space-fill {
  flex-grow: 1;
}

